# rust_app_experiments

./: .gitignore  README.md  justfile
dioxus/: Cargo.toml  README.md  justfile
dioxus/src/: main.rs
htmx/: Cargo.toml  README.md  justfile
htmx/src/: main.rs
htmx/static/: index.html
htmx/templates/: todo_list.html  todo_list_item.html
