[package]
name = "dioxus-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.77"
dioxus = "0.4.3"
dioxus-fullstack = "0.4.3"
once_cell = "1.19.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
surrealdb = "1.0.2"
tokio = { version = "1.35.1", features = ["full"], optional = true }

[features]
default = []
ssr = ["dioxus-fullstack/axum", "dep:tokio"]
web = ["dioxus-fullstack/web"]
