[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
askama = { version = "0.12.1", features = ["markdown", "with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
surrealdb = "1.0.2"
tokio = { version = "1.35.1", features = ["macros", "full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = ["util", "timeout", "cors", "fs"] }
tower-livereload = "0.9.1"
